refinement: rubocop for dev.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 AllCops:
   TargetRubyVersion: 2.5
+  NewCops: enable
 
 Style/StringLiterals:
   Enabled: true
@@ -25,6 +26,8 @@ Metrics/MethodLength:
 
 Metrics/BlockLength:
   Max: 50
+  Exclude:
+    - test/mini_aasm_test.rb
 
 Style/Documentation:
   Enabled: false
@@ -36,3 +39,6 @@ Naming/FileName:
 Lint/UnderscorePrefixedVariableName:
   Exclude:
     - lib/mini-aasm.rb
+
+Gemspec/RequireMFA:
+  Enabled: false
